--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html>
 
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Quiz App</title>
+	<meta charset="ISO-8859-1">
+	<title>Quiz App</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <h2>Simple Quiz</h2>
-        <div class="quiz">
-            <h3 id="question">Question comes here</h3>
-            <div id="answers">
-
-            </div>
-            <button id="nextButton">Next</button>
-        </div>
-    </div>
+	<div class="container">
+		<h2>Simple Quiz</h2>
+		<div class="quiz">
+			<h3 id="question">Question comes here</h3>
+			<div id="answers">
+                <!-- Answers comes here -->
+			</div>
+			<button id="nextButton">Next</button>
+		</div>
+	</div>
 </body>
 
 </html>
